styles(AboutModal): fix content overflowing on smallest devices;

--- a/src/App.scss
+++ b/src/App.scss
@@ -502,7 +502,7 @@ button.no-style {
 }
 
 .top40-container.hide-album-titles {
-  width: 730px; //FOR THE CLASSIC BOXY LOOK 
+  width: 730px; //FOR THE CLASSIC BOXY LOOK
 
   // .second-tier-classics > flex {
   //   width: 580px;   // FOR THE WIDE MODERN LOOK ^^
@@ -626,6 +626,14 @@ button.no-style {
   background-color: #000000da;
   .modal-body {
     background-color: #242424;
+  }
+
+  // prevent overflow on extra small devices
+  @media (max-width: 425px) {
+    .modal-text {
+      font-size: 9px;
+      line-height: 1.3;
+    }
   }
 }
 
